--- a/index.html
+++ b/index.html
@@ -3,100 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shahidullah Kaisar | Physics Researcher</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <title>Shahidullah Kaisar - Physics Researcher</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Navigation Sidebar -->
-    <nav class="sidebar">
-        <div class="profile">
-            <img src="images/profile.jpg" alt="Shahidullah Kaisar">
-            <h2>Shahidullah Kaisar</h2>
-            <p>Physics Researcher</p>
+    <div class="container">
+        <!-- Left Profile Section -->
+        <div class="profile-section">
+            <img src="images/profile.jpg" alt="Shahidullah Kaisar" class="profile-img">
+            <h1 class="hello-text">Hello!</h1>
         </div>
-        <ul class="nav-links">
-            <li><a href="#home"><i class="fas fa-home"></i>Home</a></li>
-            <li><a href="#research"><i class="fas fa-microscope"></i>Research</a></li>
-            <li><a href="#skills"><i class="fas fa-atom"></i>Skills</a></li>
-            <li><a href="#projects"><i class="fas fa-flask"></i>Projects</a></li>
-            <li><a href="#gallery"><i class="fas fa-images"></i>Gallery</a></li>
-            <li><a href="#contact"><i class="fas fa-envelope"></i>Contact</a></li>
-        </ul>
-    </nav>
 
-    <!-- Main Content -->
-    <main class="content">
-        <!-- Home Section -->
-        <section id="home" class="section">
-            <div class="hero">
-                <h1 class="hero-title">Quantum Computing &<br>Materials Science Researcher</h1>
-                <p class="hero-subtitle">Shahjalal University of Science and Technology</p>
-                <div class="social-links">
-                    <a href="#" class="social-btn"><i class="fab fa-github"></i></a>
-                    <a href="#" class="social-btn"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" class="social-btn"><i class="fab fa-researchgate"></i></a>
-                </div>
+        <!-- Right Content Section -->
+        <div class="content-section">
+            <div class="about-section">
+                <h2>A bit about me</h2>
+                <p>I'm a physics major student at Shahjalal University of Science and Technology. I'm working on Material Science with a focus on Density Functional Theory and Quantum Computing applications in materials research.</p>
             </div>
-        </section>
 
-        <!-- Research Section -->
-        <section id="research" class="section">
-            <h2 class="section-title">Current Research</h2>
-            <div class="research-card">
-                <div class="quantum-badge">Quantum</div>
-                <h3>DFT Study of NaGaCl<sub>3</sub></h3>
-                <p>Utilizing Density Functional Theory with Quantum Espresso to investigate electronic properties...</p>
-                <div class="tech-stack">
-                    <span>Quantum Espresso</span>
-                    <span>DFT</span>
-                    <span>Materials Studio</span>
-                </div>
+            <!-- Navigation Circles -->
+            <div class="nav-circles">
+                <a href="cv.pdf" download class="nav-item resume">
+                    <i class="fas fa-file-pdf"></i>
+                    <span>Resume</span>
+                </a>
+                <a href="projects.html" class="nav-item projects">
+                    <i class="fas fa-flask"></i>
+                    <span>Projects</span>
+                </a>
+                <a href="skills.html" class="nav-item skills">
+                    <i class="fas fa-atom"></i>
+                    <span>Skills</span>
+                </a>
+                <a href="contact.html" class="nav-item contact">
+                    <i class="fas fa-address-book"></i>
+                    <span>Contact</span>
+                </a>
             </div>
-        </section>
-
-        <!-- Skills Section -->
-        <section id="skills" class="section">
-            <h2 class="section-title">Technical Expertise</h2>
-            <div class="skills-grid">
-                <!-- Skills populated by JavaScript -->
-            </div>
-        </section>
-
-        <!-- Projects Section -->
-        <section id="projects" class="section">
-            <h2 class="section-title">Research Projects</h2>
-            <div class="projects-grid">
-                <div class="project-card">
-                    <div class="project-image">
-                        <img src="images/quantum-computing.jpg" alt="Quantum Computing">
-                    </div>
-                    <h3>Quantum Algorithm Development</h3>
-                    <p>Exploring quantum algorithms for materials simulation</p>
-                </div>
-            </div>
-        </section>
-
-        <!-- Contact Section -->
-        <section id="contact" class="section">
-            <h2 class="section-title">Get in Touch</h2>
-            <div class="contact-grid">
-                <div class="contact-card">
-                    <i class="fab fa-whatsapp"></i>
-                    <p>+880 - - - - - - - - - -</p>
-                </div>
-                <div class="contact-card">
-                    <i class="fas fa-envelope"></i>
-                    <p>-------------@gmail.com</p>
-                </div>
-                <div class="contact-card">
-                    <i class="fab fa-linkedin"></i>
-                    <p>linkedin.com/in/-------------</p>
-                </div>
-            </div>
-        </section>
-    </main>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
