--- a/contact.html
+++ b/contact.html
@@ -19,19 +19,19 @@
             <div class="contact-methods">
                 <div class="contact-card">
                     <i class="fab fa-whatsapp"></i>
-                    <p>+880 --------</p>
+                    <p>+8801723922435</p>
                 </div>
                 <div class="contact-card">
                     <i class="fas fa-envelope"></i>
-                    <p>your@email.com</p>
+                    <p>shamimhis24@email.com</p>
                 </div>
                 <div class="contact-card">
                     <i class="fab fa-linkedin"></i>
-                    <p>linkedin.com/in/yourprofile</p>
+                    <p>linkedin.com/(working one this)</p>
                 </div>
                 <div class="contact-card">
                     <i class="fab fa-github"></i>
-                    <p>github.com/yourusername</p>
+                    <p>github.com/shahidullahkaisar</p>
                 </div>
             </div>
         </div>
