--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shahidullah Kaisar - Physics Researcher</title>
+    <title>Shahidullah Kaisar</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -13,7 +13,7 @@
         <!-- Left Profile Section -->
         <div class="profile-section">
             <img src="images/profile.jpg" alt="Shahidullah Kaisar" class="profile-img">
-            <h1 class="hello-text">Hello!</h1>
+            <h1 class="hello-text">Hello! I am Shahidullah Kaisar</h1>
         </div>
 
         <!-- Right Content Section -->
