--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Left Profile Section -->
         <div class="profile-section">
             <img src="images/profile.jpg" alt="Shahidullah Kaisar" class="profile-img">
-            <h1 class="hello-text">Hello! I am Shahidullah Kaisar</h1>
+            <h1 class="hello-text">Hello! <br> I am Shahidullah Kaisar</h1>
         </div>
 
         <!-- Right Content Section -->
